initial random forest model implementation

--- a/project/data_collection.ipynb
+++ b/project/data_collection.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "98ed6cff",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,9 @@
     "# import polars as pl\n",
     "import gdown\n",
     "import os\n",
-    "import rich"
+    "import rich\n",
+    "import pyarrow\n",
+    "import fastparquet"
    ]
   },
   {
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "cdfee981",
    "metadata": {},
    "outputs": [
@@ -294,20 +296,20 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_data = pd.read_csv('synthetic_auto_policies_model_data_10042025.csv')\n",
+    "model_data = pd.read_csv('../project/model_data.csv')\n",
     "print( model_data.shape )\n",
     "model_data.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "a6781644",
    "metadata": {},
    "outputs": [
@@ -505,13 +507,13 @@
        "4                  0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "inference_data = pd.read_csv('synthetic_auto_policies_inference_data_10042025.csv')\n",
+    "inference_data = pd.read_csv('../project/inference_data.csv')\n",
     "print( inference_data.shape )\n",
     "inference_data.head(5)"
    ]
@@ -531,6 +533,25 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edf20780",
+   "metadata": {},
+   "source": [
+    "## Save Altered Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b17a8d60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_data.to_csv('../project/model_data.csv', index=False)\n",
+    "inference_data.to_csv('../project/inference_data.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
