--- a/project/data_exploration.ipynb
+++ b/project/data_exploration.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "235bc022",
    "metadata": {},
    "outputs": [],
@@ -36,28 +36,80 @@
    "source": [
     "## Target Variable Analysis\n",
     "\n",
-    "Our target variable is the expected loss per policy: Expected Loss = Claim Cost (claimcst0) / Exposure"
+    "Our target variable is the expected loss per policy normalized by exposure: Expected Loss = Claim Cost (claimcst0) / Exposure"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "cc54aed6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_data = pd.read_csv('synthetic_auto_policies_model_data_10042025.csv')"
+    "model_data = pd.read_csv('../project/model_data.csv')\n",
+    "inference_data = pd.read_csv('../project/inference_data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "251b191b",
    "metadata": {},
    "outputs": [],
    "source": [
     "model_data['expected_loss'] = model_data['claimcst0'] / model_data['exposure']"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2584edc9",
+   "metadata": {},
+   "source": [
+    "## Visualize Frequency, Severity of Claims, and Predictors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16fe671d",
+   "metadata": {},
+   "source": [
+    "## Target Encoding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8c96108",
+   "metadata": {},
+   "source": [
+    "## Check Variable Collinearity and Relationships"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7618a0d",
+   "metadata": {},
+   "source": [
+    "## Save Altered Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e2dd4bf5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_data.to_csv('../project/model_data.csv', index=False)\n",
+    "inference_data.to_csv('../project/inference_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eccef3d2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
