--- a/backend/data_exploration.ipynb
+++ b/backend/data_exploration.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "235bc022",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
-    "# from varclushi import VarClusHi\n"
+    "from varclushi import VarClusHi"
    ]
   },
   {
@@ -645,14 +645,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87ee3216",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "16fe671d",
    "metadata": {},
    "source": [
-    "## Target Encoding\n",
-    "Thinking we won't need to do this"
+    "## Target Encoding"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db71c903",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
