--- a/backend/model_implementation.ipynb
+++ b/backend/model_implementation.ipynb
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "99e149c8",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
     }
    ],
    "source": [
-    "# --- Train Random Forest ---\n",
+    "# Train Random Forest\n",
     "rf = RandomForestRegressor(\n",
     "    n_estimators=300,      # number of trees\n",
     "    max_depth=None,        # no depth limit (fully grown trees)\n",
@@ -352,10 +352,10 @@
     "\n",
     "rf.fit(X_train, y_train)\n",
     "\n",
-    "# --- In-sample predictions ---\n",
+    "# In-sample predictions\n",
     "y_pred = rf.predict(X_train)\n",
     "\n",
-    "# --- Evaluate on training data ---\n",
+    "# Evaluate on training data\n",
     "rmse = root_mean_squared_error(y_train, y_pred)\n",
     "mae = mean_absolute_error(y_train, y_pred)\n",
     "r2 = r2_score(y_train, y_pred)\n",
@@ -376,10 +376,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b444ed1",
+   "id": "057bba8d",
    "metadata": {},
    "source": [
-    "# Variable Reduction"
+    "## Frequency-Severity Modeling"
    ]
   },
   {
