--- a/backend/data_collection.ipynb
+++ b/backend/data_collection.ipynb
@@ -556,7 +556,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venv (3.11.4)",
    "language": "python",
    "name": "python3"
   },
@@ -570,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
