--- a/backend/model_implementation.ipynb
+++ b/backend/model_implementation.ipynb
@@ -724,7 +724,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venv (3.11.4)",
    "language": "python",
    "name": "python3"
   },
@@ -738,7 +738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
