--- a/backend/data_exploration.ipynb
+++ b/backend/data_exploration.ipynb
@@ -1515,7 +1515,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.11.4)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1529,7 +1529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
