--- a/backend/data_exploration.ipynb
+++ b/backend/data_exploration.ipynb
@@ -650,7 +650,24 @@
    "id": "87ee3216",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "possible_predictors = [\n",
+    "    'driving_history_score',\n",
+    "    'credit_score',\n",
+    "    'low_education_ind',\n",
+    "    'marital_status',\n",
+    "    'time_driven', # probably more important than day of week\n",
+    "    'area',\n",
+    "    'agecat',  #(encoded- young, middle, elder)\n",
+    "    'gender',\n",
+    "    'veh_color',\n",
+    "    'max_power',\n",
+    "    'engine_type',\n",
+    "    'veh_age',\n",
+    "    'veh_body', # encode- coupe, sedan, stnwg, suv, truck, ute, other)\n",
+    "    'veh_value',\n",
+    "]"
+   ]
   },
   {
    "attachments": {},
@@ -707,7 +724,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -725,7 +742,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "a1aecf4ab529624b3308cb7dce4dde2b8c06fee08bae69d9e8bc879df36c9b2a"
+    "hash": "086b28c9140890e7ed619f64670b7bd3fbb07d5916b6d2ee68f575c44dee6351"
    }
   }
  },
