--- a/backend/data_collection.ipynb
+++ b/backend/data_collection.ipynb
@@ -18,24 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "98ed6cff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
+    "# import pandas as pd\n",
+    "# import numpy as np\n",
     "# import polars as pl\n",
     "import gdown\n",
-    "import os\n",
-    "import rich\n",
-    "import pyarrow\n",
-    "import fastparquet"
+    "# import os\n",
+    "# import rich\n",
+    "# import pyarrow\n",
+    "# import fastparquet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "b9bf9079",
    "metadata": {},
    "outputs": [
@@ -45,12 +45,12 @@
      "text": [
       "Downloading...\n",
       "From: https://drive.google.com/uc?id=1Wvf4WmgOVFLu3snFkIUYI6Y5unM9b5o1\n",
-      "To: /Users/adervesh03/Desktop/Iowa/2025 Fall/MS Data Science Practicum/Hawkeye-Datathon-2025/project/synthetic_auto_policies_model_data_10042025.csv\n",
-      "100%|██████████| 1.92M/1.92M [00:00<00:00, 43.0MB/s]\n",
+      "To: /Users/aliese/Datathon_2025/Hawkeye-Datathon-2025/backend/synthetic_auto_policies_model_data_10042025.csv\n",
+      "100%|██████████| 1.92M/1.92M [00:00<00:00, 4.65MB/s]\n",
       "Downloading...\n",
       "From: https://drive.google.com/uc?id=17j2pkUwyUdOWg3-2xKQReL2JVHtSbGSN\n",
-      "To: /Users/adervesh03/Desktop/Iowa/2025 Fall/MS Data Science Practicum/Hawkeye-Datathon-2025/project/synthetic_auto_policies_inference_data_10042025.csv\n",
-      "100%|██████████| 1.51M/1.51M [00:00<00:00, 9.03MB/s]\n"
+      "To: /Users/aliese/Datathon_2025/Hawkeye-Datathon-2025/backend/synthetic_auto_policies_inference_data_10042025.csv\n",
+      "100%|██████████| 1.51M/1.51M [00:00<00:00, 5.96MB/s]\n"
      ]
     },
     {
@@ -59,7 +59,7 @@
        "'synthetic_auto_policies_inference_data_10042025.csv'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +556,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -570,7 +570,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "62416a44c063eafbabbc58266e9c28df930794cede7af9b0399f1feff9f3db87"
+   }
   }
  },
  "nbformat": 4,
