--- a/analysis_pipeline/2_data_exploration.ipynb
+++ b/analysis_pipeline/2_data_exploration.ipynb
@@ -2224,7 +2224,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data_science_bootcamp_lecture_1",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -2238,7 +2238,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a1aecf4ab529624b3308cb7dce4dde2b8c06fee08bae69d9e8bc879df36c9b2a"
+   }
   }
  },
  "nbformat": 4,
