--- a/backend/data_exploration.ipynb
+++ b/backend/data_exploration.ipynb
@@ -28,8 +28,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import sys\n",
-    "import os\n",
-    "from varclushi import VarClusHi"
+    "import os"
    ]
   },
   {
@@ -1781,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "id": "ece6157e",
    "metadata": {},
    "outputs": [],
@@ -1801,12 +1800,24 @@
     "    'veh_age',\n",
     "    'veh_body',\n",
     "    'veh_value' # were supposed to drop this but it doesn't make much sense to do\n",
+    "]\n",
+    "\n",
+    "cat_preds = [\n",
+    "    'marital_status',\n",
+    "    'time_driven',\n",
+    "    'area',\n",
+    "    'agecat_grouped',\n",
+    "    'gender',\n",
+    "    'veh_color',\n",
+    "    'engine_type',\n",
+    "    'veh_age',\n",
+    "    'veh_body',\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 57,
    "id": "cef2c679",
    "metadata": {},
    "outputs": [
@@ -1816,6 +1827,84 @@
      "text": [
       "Categorical features to encode: ['marital_status', 'time_driven', 'area', 'agecat_grouped', 'gender', 'veh_color', 'engine_type', 'veh_age', 'veh_body']\n",
       "Final Training Shape: (11204, 13)\n",
+      "Category Value Counts\n",
+      "\n",
+      "Variable: marital_status\n",
+      "marital_status\n",
+      "0.0    5076\n",
+      "1.0    6128\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Variable: time_driven\n",
+      "time_driven\n",
+      "0.0     668\n",
+      "1.0    4677\n",
+      "2.0    4310\n",
+      "3.0    1549\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Variable: area\n",
+      "area\n",
+      "0.0    2709\n",
+      "1.0    2169\n",
+      "2.0    3424\n",
+      "3.0    1306\n",
+      "4.0     984\n",
+      "5.0     612\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Variable: agecat_grouped\n",
+      "agecat_grouped\n",
+      "0.0    1001\n",
+      "1.0    9241\n",
+      "2.0     962\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Variable: gender\n",
+      "gender\n",
+      "0.0    5027\n",
+      "1.0    6177\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Variable: veh_color\n",
+      "veh_color\n",
+      "0.0    2165\n",
+      "1.0     992\n",
+      "2.0     531\n",
+      "3.0    2417\n",
+      "4.0     659\n",
+      "5.0     666\n",
+      "6.0     906\n",
+      "7.0    2413\n",
+      "8.0     455\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Variable: engine_type\n",
+      "engine_type\n",
+      "0.0    2519\n",
+      "1.0     919\n",
+      "2.0    1071\n",
+      "3.0    6695\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Variable: veh_age\n",
+      "veh_age\n",
+      "0.0    2514\n",
+      "1.0    2896\n",
+      "2.0    3282\n",
+      "3.0    2512\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Variable: veh_body\n",
+      "veh_body\n",
+      "0.0      97\n",
+      "1.0     637\n",
+      "2.0    3359\n",
+      "3.0    3049\n",
+      "4.0    2880\n",
+      "5.0     334\n",
+      "6.0     848\n",
+      "Name: count, dtype: int64\n",
       "   driving_history_score  credit_score  marital_status  time_driven  area  \\\n",
       "0                   73.0    646.516469             0.0          1.0   1.0   \n",
       "1                   88.0    635.400369             1.0          2.0   0.0   \n",
@@ -1830,12 +1919,12 @@
       "3             1.0     1.0        0.0        121          0.0      2.0   \n",
       "4             2.0     1.0        1.0         75          3.0      2.0   \n",
       "\n",
-      "   veh_body  veh_value  \n",
-      "0       4.0       5.80  \n",
-      "1       3.0       5.67  \n",
-      "2       2.0       5.90  \n",
-      "3       3.0       4.79  \n",
-      "4       2.0       6.68  \n"
+      "   veh_body  veh_value    claimcst0  numclaims  clm  exposure  \n",
+      "0       4.0       5.80  2023.198184          1    1  0.362191  \n",
+      "1       3.0       5.67  3600.172234          1    1  0.632068  \n",
+      "2       2.0       5.90  2021.144067          1    1  0.367460  \n",
+      "3       3.0       4.79  4006.845492          1    1  0.802184  \n",
+      "4       2.0       6.68  2542.953931          1    1  0.485009  \n"
      ]
     }
    ],
@@ -1844,7 +1933,7 @@
     "from sklearn.preprocessing import OrdinalEncoder\n",
     "\n",
     "X_train_final = X_bef_enc[final_preds].copy()\n",
-    "y_train_final = ['claimcst0'].copy()\n",
+    "y_train_final = df_sub[['claimcst0', 'numclaims', 'clm', 'exposure']].copy()\n",
     "\n",
     "cat_cols = X_train_final.select_dtypes(include=['object', 'category']).columns.tolist()\n",
     "print(f\"Categorical features to encode: {cat_cols}\")\n",
@@ -1853,9 +1942,52 @@
     "\n",
     "X_train_final[cat_cols] = encoder.fit_transform(X_train_final[cat_cols])\n",
     "\n",
-    "\n",
     "print(\"Final Training Shape:\", X_train_final.shape)\n",
-    "print(X_train_final.head())"
+    "\n",
+    "print(\"Category Value Counts\")\n",
+    "for col in cat_preds:\n",
+    "    print(f\"\\nVariable: {col}\")\n",
+    "    print(X_train_final[col].value_counts().sort_index())\n",
+    "\n",
+    "train_df_final = X_train_final.join(y_train_final)\n",
+    "print(train_df_final.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "a09572a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   driving_history_score  credit_score  marital_status  time_driven  area  \\\n",
+      "0                   73.0    646.516469             0.0          1.0   1.0   \n",
+      "1                   88.0    635.400369             1.0          2.0   0.0   \n",
+      "2                   55.0    646.463131             0.0          2.0   2.0   \n",
+      "3                   98.0    645.598794             0.0          3.0   1.0   \n",
+      "4                   66.0    657.348612             1.0          2.0   2.0   \n",
+      "\n",
+      "   agecat_grouped  gender  veh_color  max_power  engine_type  veh_age  \\\n",
+      "0             2.0     0.0        0.0        161          2.0      1.0   \n",
+      "1             1.0     0.0        4.0        100          0.0      3.0   \n",
+      "2             1.0     0.0        3.0         74          3.0      1.0   \n",
+      "3             1.0     1.0        0.0        121          0.0      2.0   \n",
+      "4             2.0     1.0        1.0         75          3.0      2.0   \n",
+      "\n",
+      "   veh_body  veh_value    claimcst0  numclaims  clm  exposure  \n",
+      "0       4.0       5.80  2023.198184          1    1  0.362191  \n",
+      "1       3.0       5.67  3600.172234          1    1  0.632068  \n",
+      "2       2.0       5.90  2021.144067          1    1  0.367460  \n",
+      "3       3.0       4.79  4006.845492          1    1  0.802184  \n",
+      "4       2.0       6.68  2542.953931          1    1  0.485009  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_df_final.head())"
    ]
   },
   {
@@ -1868,7 +2000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "e2dd4bf5",
    "metadata": {},
    "outputs": [],
@@ -1879,11 +2011,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "eccef3d2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_df_final.to_csv('../backend/train_df_final.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
