add cleaned data

--- a/backend/model_implementation.ipynb
+++ b/backend/model_implementation.ipynb
@@ -50,13 +50,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_data = pd.read_csv('../project/model_data.csv')\n",
-    "inference_data = pd.read_csv('../project/inference_data.csv')"
+    "model_data = pd.read_csv('../backend/model_data.csv')\n",
+    "inference_data = pd.read_csv('../backend/inference_data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d2b95b74",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "c04f90c1",
    "metadata": {},
    "outputs": [],
