--- a/backend/data_exploration.ipynb
+++ b/backend/data_exploration.ipynb
@@ -1868,13 +1868,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "e2dd4bf5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_data.to_csv('../project/model_data.csv', index=False)\n",
-    "inference_data.to_csv('../project/inference_data.csv', index=False)"
+    "model_data.to_csv('../backend/model_data.csv', index=False)\n",
+    "inference_data.to_csv('../backend/inference_data.csv', index=False)"
    ]
   },
   {
