--- a/backend/data_exploration.ipynb
+++ b/backend/data_exploration.ipynb
@@ -60,8 +60,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_data = pd.read_csv('../backend/model_data.csv')\n",
-    "inference_data = pd.read_csv('../backend/inference_data.csv')"
+    "model_data = pd.read_csv('../backend/model_data_cleaned.csv')\n",
+    "inference_data = pd.read_csv('../backend/inference_data_cleaned.csv')"
    ]
   },
   {
