--- a/backend/data_exploration.ipynb
+++ b/backend/data_exploration.ipynb
@@ -2687,7 +2687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 105,
    "id": "6cb2d4e7",
    "metadata": {},
    "outputs": [],
@@ -2708,7 +2708,7 @@
     "    'veh_age',\n",
     "    # 'veh_body', # encode- coupe, sedan, stnwg, suv, truck, ute, other)\n",
     "    'veh_body_grouped',\n",
-    "    'veh_value',\n",
+    "    'veh_value'\n",
     "    # 'e_bill',\n",
     "    # 'trm_len', dropped after rf feature importance\n",
     "    # 'time_of_week_driven'\n",
@@ -2717,7 +2717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 106,
    "id": "9110f119",
    "metadata": {},
    "outputs": [
@@ -3044,43 +3044,225 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "id": "aaa105d6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Categorical features to encode: ['marital_status', 'time_driven', 'area', 'agecat_grouped', 'gender', 'veh_color', 'engine_type', 'veh_body_grouped']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>driving_history_score</th>\n",
+       "      <th>credit_score</th>\n",
+       "      <th>low_education_ind</th>\n",
+       "      <th>marital_status</th>\n",
+       "      <th>time_driven</th>\n",
+       "      <th>area</th>\n",
+       "      <th>agecat_grouped</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>veh_color</th>\n",
+       "      <th>max_power</th>\n",
+       "      <th>engine_type</th>\n",
+       "      <th>veh_age</th>\n",
+       "      <th>veh_body_grouped</th>\n",
+       "      <th>veh_value</th>\n",
+       "      <th>claimcst0</th>\n",
+       "      <th>numclaims</th>\n",
+       "      <th>clm</th>\n",
+       "      <th>exposure</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>74.0</td>\n",
+       "      <td>648.136355</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>267</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>6.49</td>\n",
+       "      <td>3906.881054</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.746884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>59.0</td>\n",
+       "      <td>654.686205</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>129</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.56</td>\n",
+       "      <td>4260.552605</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.848036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>62.0</td>\n",
+       "      <td>642.842943</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>122</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.09</td>\n",
+       "      <td>2056.330796</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.356544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>83.0</td>\n",
+       "      <td>655.733899</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>115</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>7.13</td>\n",
+       "      <td>4756.658716</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.896206</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>63.0</td>\n",
+       "      <td>642.523923</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>183</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.37</td>\n",
+       "      <td>2347.028119</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.401096</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    driving_history_score  credit_score  low_education_ind  marital_status  \\\n",
+       "9                    74.0    648.136355                0.0             0.0   \n",
+       "13                   59.0    654.686205                0.0             1.0   \n",
+       "14                   62.0    642.842943                0.0             0.0   \n",
+       "18                   83.0    655.733899                0.0             1.0   \n",
+       "24                   63.0    642.523923                0.0             1.0   \n",
+       "\n",
+       "    time_driven  area  agecat_grouped  gender  veh_color  max_power  \\\n",
+       "9           1.0   1.0             1.0     0.0        1.0        267   \n",
+       "13          2.0   3.0             1.0     1.0        1.0        129   \n",
+       "14          2.0   2.0             2.0     1.0        3.0        122   \n",
+       "18          2.0   1.0             1.0     1.0        1.0        115   \n",
+       "24          1.0   0.0             1.0     1.0        3.0        183   \n",
+       "\n",
+       "    engine_type  veh_age  veh_body_grouped  veh_value    claimcst0  numclaims  \\\n",
+       "9           0.0        4               5.0       6.49  3906.881054          1   \n",
+       "13          1.0        3               2.0       6.56  4260.552605          1   \n",
+       "14          3.0        2               2.0       6.09  2056.330796          1   \n",
+       "18          3.0        4               2.0       7.13  4756.658716          1   \n",
+       "24          3.0        3               4.0       6.37  2347.028119          1   \n",
+       "\n",
+       "    clm  exposure  \n",
+       "9     1  0.746884  \n",
+       "13    1  0.848036  \n",
+       "14    1  0.356544  \n",
+       "18    1  0.896206  \n",
+       "24    1  0.401096  "
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Creating final training datasets\n",
+    "# Creating final validation datasets\n",
     "from sklearn.preprocessing import OrdinalEncoder\n",
     "\n",
-    "X_train_final = X_bef_enc[possible_predictors].copy()\n",
-    "y_train_final = df_sub[['claimcst0', 'numclaims', 'clm', 'exposure']].copy()\n",
+    "df_val = model_data[model_data['sample'] == '2|val'].copy()\n",
     "\n",
-    "cat_cols = X_train_final.select_dtypes(include=['object', 'category']).columns.tolist()\n",
+    "df_val['veh_body_grouped'] = df_val['veh_body'].apply(group_vehicle_body)\n",
+    "df_val['agecat_grouped'] = df_val['agecat'].apply(group_age_category)\n",
+    "\n",
+    "X_val_final = df_val[preds_after_rf].copy()\n",
+    "y_val_final = df_val[['claimcst0', 'numclaims', 'clm', 'exposure']].copy()\n",
+    "\n",
+    "cat_cols = X_val_final.select_dtypes(include=['object', 'category']).columns.tolist()\n",
     "print(f\"Categorical features to encode: {cat_cols}\")\n",
     "\n",
     "encoder = OrdinalEncoder(handle_unknown='use_encoded_value', unknown_value=-1)\n",
     "\n",
-    "X_train_final[cat_cols] = encoder.fit_transform(X_train_final[cat_cols])\n",
+    "X_val_final[cat_cols] = encoder.fit_transform(X_val_final[cat_cols])\n",
     "\n",
-    "print(\"Final Training Shape:\", X_train_final.shape)\n",
-    "\n",
-    "print(\"Category Value Counts\")\n",
-    "for col in cat_preds:\n",
-    "    print(f\"\\nVariable: {col}\")\n",
-    "    print(X_train_final[col].value_counts().sort_index())\n",
-    "\n",
-    "\n",
-    "\n",
-    "train_df_final = X_train_final.join(y_train_final)"
+    "val_df_final = X_val_final.join(y_val_final)\n",
+    "val_df_final.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a929e5b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -3303,12 +3485,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 110,
    "id": "eccef3d2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df_final.to_csv('../backend/train_df_final.csv', index=False)"
+    "train_df_final.to_csv('../backend/train_df_final.csv', index=False)\n",
+    "val_df_final.to_csv('../backend/val_df_final.csv', index=False)"
    ]
   }
  ],
