processed inference data

--- a/backend/prep_inference_data.ipynb
+++ b/backend/prep_inference_data.ipynb
@@ -10,26 +10,306 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inf_df = pd.read_csv('../backend/inference_data_cleaned.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictors = [\n",
+    "    'driving_history_score',\n",
+    "    'credit_score',\n",
+    "    'low_education_ind',\n",
+    "    'marital_status',\n",
+    "    'time_driven',\n",
+    "    'area',\n",
+    "    'agecat_grouped',\n",
+    "    'gender',\n",
+    "    'veh_color',\n",
+    "    'max_power',\n",
+    "    'engine_type',\n",
+    "    'veh_age',\n",
+    "    'veh_body_grouped',\n",
+    "    'veh_value'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Re-encoding functions for agecat and veh_body\n",
+    "def group_age_category(cat):\n",
+    "    if cat == 1:\n",
+    "        return 'Young'\n",
+    "    elif cat == 6:\n",
+    "        return 'Elder'\n",
+    "    else:\n",
+    "        return 'Middle'\n",
+    "\n",
+    "keep_bodies = {'SEDAN', 'STNWG', 'SUV', 'TRUCK', 'UTE', 'COUPE'}\n",
+    "\n",
+    "def group_vehicle_body(body_style):\n",
+    "    if pd.isna(body_style):\n",
+    "        return 'OTHER'\n",
+    "\n",
+    "    normalized_style = str(body_style).upper()\n",
+    "\n",
+    "    if normalized_style in keep_bodies:\n",
+    "        return normalized_style\n",
+    "    else:\n",
+    "        return 'OTHER'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Categorical features to encode: ['marital_status', 'time_driven', 'area', 'agecat_grouped', 'gender', 'veh_color', 'engine_type', 'veh_body_grouped']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>driving_history_score</th>\n",
+       "      <th>credit_score</th>\n",
+       "      <th>low_education_ind</th>\n",
+       "      <th>marital_status</th>\n",
+       "      <th>time_driven</th>\n",
+       "      <th>area</th>\n",
+       "      <th>agecat_grouped</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>veh_color</th>\n",
+       "      <th>max_power</th>\n",
+       "      <th>engine_type</th>\n",
+       "      <th>veh_age</th>\n",
+       "      <th>veh_body_grouped</th>\n",
+       "      <th>veh_value</th>\n",
+       "      <th>exposure</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8295</td>\n",
+       "      <td>81</td>\n",
+       "      <td>644.721808</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>128</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.36</td>\n",
+       "      <td>0.777085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>17625</td>\n",
+       "      <td>94</td>\n",
+       "      <td>634.306196</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>178</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.56</td>\n",
+       "      <td>0.528369</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3802</td>\n",
+       "      <td>77</td>\n",
+       "      <td>649.245139</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>270</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.18</td>\n",
+       "      <td>0.384591</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>12865</td>\n",
+       "      <td>59</td>\n",
+       "      <td>647.594655</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>120</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.49</td>\n",
+       "      <td>0.116378</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6495</td>\n",
+       "      <td>81</td>\n",
+       "      <td>657.550500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>94</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.46</td>\n",
+       "      <td>0.688417</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id  driving_history_score  credit_score  low_education_ind  \\\n",
+       "0   8295                     81    644.721808                  0   \n",
+       "1  17625                     94    634.306196                  0   \n",
+       "2   3802                     77    649.245139                  0   \n",
+       "3  12865                     59    647.594655                  0   \n",
+       "4   6495                     81    657.550500                  0   \n",
+       "\n",
+       "   marital_status  time_driven  area  agecat_grouped  gender  veh_color  \\\n",
+       "0             1.0          2.0   0.0             1.0     1.0        6.0   \n",
+       "1             1.0          1.0   0.0             2.0     0.0        7.0   \n",
+       "2             0.0          3.0   3.0             1.0     0.0        8.0   \n",
+       "3             1.0          2.0   3.0             1.0     1.0        3.0   \n",
+       "4             1.0          2.0   2.0             1.0     0.0        4.0   \n",
+       "\n",
+       "   max_power  engine_type  veh_age  veh_body_grouped  veh_value  exposure  \n",
+       "0        128          2.0        3               4.0       6.36  0.777085  \n",
+       "1        178          0.0        1               3.0       2.56  0.528369  \n",
+       "2        270          3.0        4               1.0       6.18  0.384591  \n",
+       "3        120          3.0        3               4.0       6.49  0.116378  \n",
+       "4         94          3.0        2               2.0       6.46  0.688417  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import OrdinalEncoder\n",
+    "\n",
+    "inf_df['veh_body_grouped'] = inf_df['veh_body'].apply(group_vehicle_body)\n",
+    "inf_df['agecat_grouped'] = inf_df['agecat'].apply(group_age_category)\n",
+    "\n",
+    "X = inf_df[['id'] + predictors].copy()\n",
+    "y = inf_df[['exposure']].copy()\n",
+    "\n",
+    "cat_cols = X.select_dtypes(include=['object', 'category']).columns.tolist()\n",
+    "print(f\"Categorical features to encode: {cat_cols}\")\n",
+    "\n",
+    "encoder = OrdinalEncoder(handle_unknown='use_encoded_value', unknown_value=-1)\n",
+    "\n",
+    "X[cat_cols] = encoder.fit_transform(X[cat_cols])\n",
+    "\n",
+    "inf_df_final = X.join(y)\n",
+    "inf_df_final.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inf_df_final.to_csv('../backend/inf_df_final.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "62416a44c063eafbabbc58266e9c28df930794cede7af9b0399f1feff9f3db87"
+    "hash": "4e4a407d719dcfccfd6f02e25d2d1ba93d798982ab9977c9e5c5981820f62ec8"
    }
   }
  },
